tests/traci/set_variable/Vehicle/ChangeTarget/InvalidEdgeId/errors.traci
Error: Answered with error to command 0xc4: Destination edge 'e_bla' is not known.
